Add GET stage and performance to the api
